# intune-diagnostics

./: .dockerignore  .env.example  .gitignore  .scenario_validation.json  .tmp_lookup_test.py  .tmp_parse.py  .tmp_scenarios.py  AZURE_DEPLOYMENT.md  DATA_WAREHOUSE_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_SUMMARY.md  DOCKER_DEPLOYMENT_CHECKLIST.md  DOCKER_QUICK_REF.md  Dockerfile  README.md  README_DEPLOYMENT.md  SCENARIO_LOOKUP_CHANGES.md  build.sh  docker-compose.yml  instructions.md  instructions.md.backup  instructions.md.backup_20251029_122550  instructions_placeholder.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  startup.sh
.cache/: scenario_index.faiss  scenario_index.meta.json  scenario_index.pkl
.claude/: settings.local.json
.github/workflows/: azure-app-service-deployment_intunediagnostics.yml  azure-deploy-docker.yml  azure-deploy.yml  main_intunediagnostics.yml
backend/: .env.example  conversation_state.json  dependencies.py  main.py
backend/backend/: conversation_state.json
backend/mcp_servers/datawarehouse/: README.md  package-lock.json  package.json  tsconfig.json
backend/mcp_servers/datawarehouse/src/: client.ts  entities.ts  index.ts  server.ts  types.ts
backend/mcp_servers/instructions/: __init__.py  models.py  parser.py  server.py  store.py
backend/models/: database.py  schemas.py
backend/routers/: auth.py  diagnostics.py  settings.py
backend/services/: agent_framework_service.py  agent_service.py  auth_service.py  autogen_service.py  conversation_state.py  datawarehouse_mcp_service.py  entity_resolution.py  instructions_mcp_service.py  instructions_parser.py  kusto_mcp_service.py  scenario_lookup_service.py  scenario_state.py  semantic_scenario_search.py
docs/: ADD_COGNITIVE_SERVICES_PERMISSION.md  AGENT_FRAMEWORK_DEADLOCK_FIX.md  AGENT_FRAMEWORK_IMPROVEMENTS.md  AGENT_FRAMEWORK_MIGRATION.md  AGENT_FRAMEWORK_QUICK_REFERENCE.md  AGENT_FRAMEWORK_TABLE_FIX.md  AGENT_LOOPING_FIX.md  AGENT_LOOPING_FIX_IMPLEMENTATION.md  AGENT_LOOPING_FIX_SUMMARY.md  AGENT_LOOPING_FIX_V2.md  AGENT_LOOPING_QUICK_REF.md  AGENT_MESSAGE_LOGGING.md  AGENT_QUERY_ENTITY_FIX.md  AGENT_STEP5_EXECUTE_FIX.md  AUTHENTICATION_FIX.md  AUTHENTICATION_ROBUST_FIX.md  CHATMESSAGE_FIX.md  COMPLETE_FIX_SUMMARY.md  CONVERSATION_STATE_FIX.md  DATA_WAREHOUSE_API_LIMITATIONS.md  DATA_WAREHOUSE_MCP_SPEC.md  DEMO_SCRIPT.md  DEPLOYMENT_OPTIONS.md  DOCKER_DEPLOYMENT.md  EXECUTE_QUERY_FIX.md  FIXES_SUMMARY.md  FSTRING_ERROR_FIX_V2.md  INSTRUCTIONS_MCP_COMPLETE.md  INSTRUCTIONS_MCP_INTEGRATION.md  INSTRUCTIONS_MCP_REFERENCE.md  INSTRUCTIONS_REFORMATTING_SUMMARY.md  LEGACY_TOOL_REMOVAL.md  LOOPING_FIX_V2.md  MAGENTIC_EVENT_LOGGING.md  MAGENTIC_IMPLEMENTATION.md  MAGENTIC_TASK_COMPLETION_FIX.md  MANAGED_IDENTITY_SETUP.md  METADATA_ENHANCED_LOOKUP_SUMMARY.md  MIGRATION_COMPLETE.md  OAUTH_IMPLEMENTATION_SUMMARY.md  (+20 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: clear-cache.html
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DataTable.tsx  Layout.tsx  MarkdownRenderer.tsx  ModelConfigForm.tsx  Navigation.tsx
frontend/src/config/: authConfig.ts  axiosConfig.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: AdvancedScenariosPage.tsx  ChatPage.tsx  DashboardPage.tsx  DiagnosticsPage.tsx  LoginPage.tsx  SettingsPage.tsx
frontend/src/services/: authService.ts  diagnosticsService.ts  settingsService.ts
scripts/: build_lock_compliance.py  diagnose_scenarios.py  migrate_add_framework_column.py  reformat_instructions.py  run_diag.ps1  test_compliance_variants.py  test_frameworks.py  test_metadata_lookup.py  validate_all_scenarios.py
