[project]
name = "intune-diagnostics-backend"
version = "0.1.0"
description = "Intune Diagnostics Web App Backend with Agentic AI"
authors = [{ name = "Support Engineer", email = "support@example.com" }]
readme = "docs/README.md"
requires-python = ">=3.11"
# Dependency version policy:
# We intentionally use lower-bound (>=) constraints to allow `uv lock --upgrade` to pull in the
# newest compatible versions. Pre-releases (betas) are currently allowed globally (see [tool.uv])
# which means new beta versions of core libs (e.g. pydantic, agent-framework) may land during an
# upgrade. If you want to avoid accidental beta adoption, either:
#   1. Remove `prerelease = "allow"` in [tool.uv]; or
#   2. Pin specific packages here (e.g. "fastapi==0.118.0") after verifying stability; or
#   3. Use environment variable: UV_PRERELEASE=disallow for one-off stable-only upgrades.
# Upgrade workflow (manual):
#   pwsh> Copy-Item uv.lock uv.lock.bak
#   pwsh> uv lock --upgrade              # recompute lock with newest allowed versions
#   pwsh> uv sync                        # install updated set
#   pwsh> pytest -q                      # (optional) run tests
#   pwsh> uv pip check                   # (optional) verify dependency graph integrity
# If a regression appears, compare uv.lock with uv.lock.bak and selectively pin the culprit.
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
    "azure-identity>=1.15.0",
    "autogen-agentchat>=0.4.0",
    "autogen-ext[azure,openai]>=0.4.0",
    "agent-framework>=0.1.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "aiofiles>=23.2.1",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.13.1",
    "autogen-magentic-one>=0.0.1",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "hf-xet>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]
# Allow prerelease versions for agent-framework and related packages
prerelease = "allow"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["E501"]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
